# SAFRS

./: detect_color_n_communicate_mainpi.py
3rdproject/: .cproject  .mxproject  .project  3rdproject Debug.launch  3rdproject.ioc
3rdproject/Core/Inc/: stm32f4xx_hal_conf.h
3rdproject/Core/Src/: gpio.c  i2c.c  main.c  tim.c  usart.c
3rdproject/Debug/: 3rdproject.elf  3rdproject.list  3rdproject.map  makefile  objects.list
3rdproject/Debug/Core/Src/: gpio.d  i2c.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
3rdproject/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  (+10 more)
LiDAR Raspberry Pi/: lidar.service
LiDAR Raspberry Pi/lidar_client/: lidar_reader.py
MAIN Raspberry Pi/project_hybrid_cluster/: CMakeListsts.txt  README.md  package.xml
MAIN Raspberry Pi/project_hybrid_cluster/config/: README.md  nav2_params.yaml
MAIN Raspberry Pi/project_hybrid_cluster/launch/: README.md  main_system.launch.py  nav.launch.py  rviz.launch.py  zmq_listener.launch.py
MAIN Raspberry Pi/project_hybrid_cluster/scripts/: README.md  zmq_camera_sub.py  zmq_lidar_sub.py  zmq_motor_pub.py  zmq_odom_sub.py
Motor_Control Raspberry Pi/: motor_client.service
Motor_Control Raspberry Pi/motor_client/: README.md  motor_command_sub.py  motor_odom_pub.py  motor_serial_bridge.py
